--- a/portfolio.css
+++ b/portfolio.css
@@ -49,6 +49,7 @@ header{
     transition: color 0.3s;
 }
 
+
 .nav-links li a:hover{
     color: red;
 }
@@ -57,11 +58,6 @@ header{
     display: flex;
     align-items: center;
     gap: 20px;
-}
-
-.login{
-    text-decoration: none;
-    color: white;
 }
 
 .btn{
@@ -181,5 +177,29 @@ header{
         width: 220px;
         margin-top: 20px;
     }
+}
+
+.footer {
+    background-color: #222;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.footer p {
+    margin-bottom: 20px;
+    font-size: 14px;
+}
+
+.social-icons a {
+    color: white;
+    margin: 0 10px;
+    font-size: 20px;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.social-icons a:hover {
+    color: #00aced;
 }
 
