--- a/portfolio.css
+++ b/portfolio.css
@@ -79,6 +79,8 @@ header{
     min-height: calc(100vh - 60px);
     display: flex;
     align-items: center;
+    background-image: url(aneeshportfolio.avif);
+    background-size: cover;
 }
 
 .hero-content{
@@ -228,4 +230,5 @@ font-size:1.1rem;
 max-width:220px;
 }
 }
+
 
