--- a/portfolio.css
+++ b/portfolio.css
@@ -9,12 +9,13 @@
 body{
     background-color: #000;
     color: #fff;
+         
 }
 
 
 header{
     width: 100%;
-    background: rgba(255, 255, 255, 0.1);
+    background-color: black;
 }
 
 .nav{
@@ -79,6 +80,8 @@ header{
     min-height: calc(100vh - 60px);
     display: flex;
     align-items: center;
+    background-image: url(aneeshportfolio.avif);
+    background-size: cover;
 }
 
 .hero-content{
@@ -168,7 +171,7 @@ header{
 }
 
 .footer {
-    background-color: #222;
+    background-color: black;
     color: white;
     text-align: center;
     padding: 20px 0;
@@ -228,6 +231,4 @@ font-size:1.1rem;
 max-width:220px;
 }
 }
-
-
 
