--- a/portfolio.css
+++ b/portfolio.css
@@ -80,8 +80,10 @@ header{
     min-height: calc(100vh - 60px);
     display: flex;
     align-items: center;
-    background-image: url(aneeshportfolio.png);
+    background-image: url("../images/aneeshportfolio.png");
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .hero-content{
@@ -231,4 +233,5 @@ font-size:1.1rem;
 max-width:220px;
 }
 }
+
 
